--- a/package.json
+++ b/package.json
@@ -13,28 +13,49 @@
     "type-check": "tsc --noEmit",
     "docs": "typedoc --out docs src"
   },
-  "peerDependencies": {
-    "@tanstack/react-table": "^8.19.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "typedoc": "^0.24.8",
-    "typescript": "^5.0.0"
-  },
   "author": "Sajad321",
   "license": "ISC",
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "@tanstack/react-table": "^8.19.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "chrono-node": "^2.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.3",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.475.0",
+    "react-day-picker": "^8.10.1",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
+    "react-select": "^5.10.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "tailwindcss": "^3.4.4",
+    "typedoc": "^0.24.8",
+    "typescript": "^5.0.0"
   }
 }
